--- a/spaceRace/Properties/Resources.resx
+++ b/spaceRace/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="rocket_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\rocket-icon.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_391539__unlistenable__electro_win_sound" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\391539__unlistenable__electro-win-sound.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="_521620__lucas_post__electronic_bomb" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\521620__lucas-post__electronic-bomb.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
